Remove migration id from the sv app and validator app configs
Read it from the db with a fallback reading it from a new scan endpoint

[ci]
