# apps/splitwell/src/main/scala/org/lfdecentralizedtrust/splice/splitwell/SplitwellApp.scala
@@ -114,14 +114,16 @@ class SplitwellApp(
       participantAdminConnection.getParticipantId()
     }
     storeKey = SplitwellStore.Key(providerParty = partyId)
-    // TODO(DACH-NY/canton-network-node#9731): get migration id from sponsor sv / scan instead of configuring here
+    domainMigrationId <- appInitStep(s"Resolving domain migration id") {
+      scanConnection.getMigrationId()
+    }
     store = SplitwellStore(
       storeKey,
       storage,
       config.domains,
       loggerFactory,
       retryProvider,
-      config.domainMigrationId,
+      domainMigrationId,
       participantId,
       config.automation.ingestion,
       config.parameters.defaultLimit,
