# apps/validator/src/main/scala/org/lfdecentralizedtrust/splice/validator/ValidatorApp.scala
@@ -48,6 +48,7 @@ import org.lfdecentralizedtrust.splice.identities.NodeIdentitiesStore
 import org.lfdecentralizedtrust.splice.scan.admin.api.client
 import org.lfdecentralizedtrust.splice.scan.admin.api.client.{
   BftScanConnection,
+  ScanConnection,
   SingleScanConnection,
 }
 import org.lfdecentralizedtrust.splice.scan.config.ScanAppClientConfig
@@ -126,34 +127,24 @@ class ValidatorApp(
       traceContext: TraceContext
   ): Future[Unit] = for {
     _ <- withParticipantAdminConnection { participantAdminConnection =>
-      UpdateHistory.getHighestKnownMigrationId(storage).flatMap {
-        case Some(migrationId) if !config.svValidator && migrationId < config.domainMigrationId =>
-          throw Status.INVALID_ARGUMENT
-            .withDescription(
-              s"Migration ID was incremented (to ${config.domainMigrationId}) but no migration dump for restoring from was specified."
-            )
-            .asRuntimeException()
-        case _ =>
-          val cantonIdentifierConfig =
-            ValidatorCantonIdentifierConfig.resolvedNodeIdentifierConfig(config)
-          val participantInitializer = new ParticipantInitializer(
-            cantonIdentifierConfig.participant,
-            config.participantBootstrappingDump,
-            loggerFactory,
-            retryProvider,
-            participantAdminConnection,
-          )
-          if (config.svValidator) {
-            logger.info("Waiting for the participant to be initialized by the SV app")
-            participantInitializer.waitForNodeInitialized()
-          } else {
-            logger.info(
-              "Ensuring participant is initialized"
-            )
-            participantInitializer.ensureInitializedWithExpectedId()
-          }
+      val cantonIdentifierConfig =
+        ValidatorCantonIdentifierConfig.resolvedNodeIdentifierConfig(config)
+      val participantInitializer = new ParticipantInitializer(
+        cantonIdentifierConfig.participant,
+        config.participantBootstrappingDump,
+        loggerFactory,
+        retryProvider,
+        participantAdminConnection,
+      )
+      if (config.svValidator) {
+        logger.info("Waiting for the participant to be initialized by the SV app")
+        participantInitializer.waitForNodeInitialized()
+      } else {
+        logger.info(
+          "Ensuring participant is initialized"
+        )
+        participantInitializer.ensureInitializedWithExpectedId()
       }
-
     }
   } yield ()
 
@@ -193,11 +184,14 @@ class ValidatorApp(
                 ValidatorScanConnection.persistScanUrlListBuilder(configProvider),
               )
             }
+            domainMigrationId <- appInitStep("Resolving domain migration id") {
+              resolveDomainMigrationId(scanConnection)
+            }
             domainConnector = new DomainConnector(
               config,
               participantAdminConnection,
               scanConnection,
-              config.domainMigrationId,
+              domainMigrationId,
               retryProvider,
               loggerFactory,
             )
@@ -536,6 +530,20 @@ class ValidatorApp(
     f(participantAdminConnection).andThen { _ => participantAdminConnection.close() }
   }
 
+  private def resolveDomainMigrationId(
+      scanConnection: ScanConnection
+  )(implicit traceContext: TraceContext): Future[Long] =
+    UpdateHistory.getHighestKnownMigrationId(storage).flatMap {
+      case Some(migrationId) =>
+        logger.info(s"Resolved domain migration id $migrationId from the local update history")
+        Future.successful(migrationId)
+      case None =>
+        scanConnection.getMigrationId().map { migrationId =>
+          logger.info(s"Resolved domain migration id $migrationId from scan")
+          migrationId
+        }
+    }
+
   private def newTrafficBalanceService(
       participantAdminConnection: ParticipantAdminConnection,
       scanConnection: BftScanConnection,
@@ -617,6 +625,10 @@ class ValidatorApp(
         )
       }
 
+      domainMigrationId <- appInitStep("Resolving domain migration id") {
+        resolveDomainMigrationId(scanConnection)
+      }
+
       // Register the traffic balance service
       trafficBalanceService = newTrafficBalanceService(participantAdminConnection, scanConnection)
       _ = ledgerClient.registerTrafficBalanceService(trafficBalanceService)
@@ -638,7 +650,7 @@ class ValidatorApp(
         storage,
         loggerFactory,
         retryProvider,
-        config.domainMigrationId,
+        domainMigrationId,
         participantId,
         config.automation.ingestion,
         config.parameters.defaultLimit,
@@ -690,7 +702,7 @@ class ValidatorApp(
             storage,
             retryProvider,
             loggerFactory,
-            config.domainMigrationId,
+            domainMigrationId,
             participantId,
             config.parameters,
             scanConnection,
@@ -709,7 +721,7 @@ class ValidatorApp(
             scanConnection,
             packageVersionSupport,
             loggerFactory,
-            config.domainMigrationId,
+            domainMigrationId,
             participantId,
             validatorTopupConfig,
             config.walletSweep,
@@ -743,11 +755,11 @@ class ValidatorApp(
           config,
           participantAdminConnection,
           scanConnection,
-          config.domainMigrationId,
+          domainMigrationId,
           retryProvider,
           loggerFactory,
         ),
-        config.domainMigrationId,
+        domainMigrationId,
         retryProvider,
         config.svValidator,
         config.sequencerRequestAmplificationPatience.toInternal,
@@ -871,7 +883,7 @@ class ValidatorApp(
             loggerFactory,
             retryProvider,
             participantAdminConnection,
-            config.domainMigrationId,
+            domainMigrationId,
           ),
           walletManager,
         )
